# emailops

./: .env.example  .gitignore  .pre-commit-config.yaml  .rules.md  AGENTS.md  ANALYSIS_REFACTORING_SUMMARY.md  Build-Conversations.fixed.ps1  COMPLETION_SUMMARY.txt  COMPREHENSIVE_CODE_ANALYSIS.html  COMPREHENSIVE_QC_REPORT.md  CONFIG_USAGE_ANALYSIS.md  CRITICAL_ISSUES_SUMMARY.md  CURRENT_STATUS_AND_ISSUES.md  DEVOPS_VERIFICATION_REPORT.md  Dockerfile  EMAILOPS_CODE_ANALYSIS_REPORT.md  EMAILOPS_FUNCTION_MAP.md  EMAILOPS_FUNCTION_USAGE_MATRIX.md  EMAILOPS_GUI_COMPLETE_IMPLEMENTATION.md  EMAILOPS_GUI_COMPREHENSIVE_ISSUES_AND_FIXES.md  EMAILOPS_GUI_ENHANCEMENT_PLAN.md  EMAILOPS_GUI_IMPLEMENTATION_COMPLETE.md  EMAILOPS_GUI_PRODUCTION_ENHANCEMENTS.md  EMAILOPS_GUI_PRODUCTION_ENHANCEMENT_PLAN.md  EMAILOPS_GUI_V3_ENHANCEMENTS.md  EMAILOPS_GUI_VERIFICATION_REPORT.md  EMAILOPS_REMAINING_FIXES.md  EmailOps.ps1  FINAL_FIXES_STATUS_REPORT.md  FINAL_REFACTORING_SUMMARY.md  FIXES_APPLIED.md  FIXES_PROGRESS_SUMMARY.md  FUNCTION_USAGE_STATS.html  GEMINI_CLI_COMPLETE_SETUP.md  GEMINI_CODE_ASSIST_SETUP.md  GEMINI_SUPERPOWERS_GUIDE.md  GENAI_AUTHENTICATION_SETUP.md  IMPLEMENTATION_CHECKLIST.md  NEXT_STEPS_GUI_IMPLEMENTATION.md  OPERATIONS.md  (+223 more)
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial_schema.py  003_add_pgvector.py  004_add_rls.py  005_consolidated_embedding_dim.py  005_update_embedding_dim.py  005_update_embedding_dim.py.superseded  006_add_hnsw_index.py  007_resize_embedding_dim_3840.py  008_resize_embedding_dim_1024.py  009_resize_embedding_dim_3840.py  010_add_fts_support.py  011_fix_vector_schema.py  012_update_audit_log_schema.py  013_add_graph_entities.py  014_add_summary_text_column.py  015_add_node_merge_func.py  015_add_summary_indexes.py  016_add_pagerank.py  CONSOLIDATION_README.md  ec7386d2401e_add_ingestjob_and_factsledger.py
backend/scripts/: batch_ingest.py  inspect_s3_structure.py
backend/src/: main.py  orchestrate_ui_full.py
backend/src/cortex/: cli.py  cmd_doctor.py  context.py  email_processing.py  health.py  indexer.py  main.py  observability.py  orchestrator.py  queue.py  queue_registry.py  routes_admin.py  routes_auth.py  text_extraction.py
backend/src/cortex/archive/: email_processing_legacy.py  parser_email.py
backend/src/cortex/audit/: __init__.py
backend/src/cortex/chunking/: __init__.py  chunker.py
backend/src/cortex/cli/: audit.py
backend/src/cortex/common/: exceptions.py  models.py  redis.py  types.py
backend/src/cortex/config/: audit_config.py  loader.py  models.py
backend/src/cortex/db/: __init__.py  models.py  session.py
backend/src/cortex/domain/: __init__.py  models.py
backend/src/cortex/domain_models/: __init__.py  facts_ledger.py  rag.py
backend/src/cortex/embeddings/: __init__.py  client.py
backend/src/cortex/ingestion/: __init__.py  attachments.py  attachments_log.py  backfill.py  constants.py  conv_loader.py  conversation_parser.py  core_manifest.py  mailroom.py  models.py  parser_email.py  pii.py  processor.py  quoted_masks.py  rechunk.py  s3_source.py  text_preprocessor.py  text_utils.py  writer.py
backend/src/cortex/intelligence/: graph.py  graph_discovery.py  query_expansion.py  summarizer.py
backend/src/cortex/llm/: __init__.py  async_runtime.py  client.py  doks_scaler.py  gguf_provider.py  runtime.py
backend/src/cortex/orchestration/: __init__.py  graphs.py  nodes.py  redacted.py  states.py
backend/src/cortex/prompts/: __init__.py
backend/src/cortex/rag_api/: __init__.py  models.py  routes_answer.py  routes_chat.py  routes_draft.py  routes_ingest.py  routes_search.py  routes_summarize.py  routes_threads.py  services.py
backend/src/cortex/retrieval/: __init__.py  _hybrid_helpers.py  async_cache.py  cache.py  filters.py  (+9 more)
backend/tests/: conftest.py  test_async_cache.py  test_atomic_io.py  test_bare_except.py  test_cache.py  test_chunker.py  test_cmd_doctor_checks.py  test_cmd_doctor_unit.py  test_config_models.py  test_conv_loader.py  test_core_manifest.py  test_cortex_cli.py  test_doks_scaler.py  test_domain_models.py  test_exceptions.py  test_filter_resolution.py  test_filters.py  test_health.py  test_hybrid_search.py  test_idempotency.py  test_incremental_ingestion.py  test_llm_runtime.py  test_mailroom.py  test_nodes_unit.py  test_observability.py  test_orchestrator.py  test_participant_merging.py  test_ported_logic.py  test_progressive_scaling.py  test_query_expansion.py  test_queue.py  test_queue_unit.py  test_rechunk.py  test_reranking.py  test_routes_chat_unit.py  test_routes_draft_unit.py  test_s3_source.py  test_summarize_api.py  test_text_extraction.py  test_vector_store_unit.py
backend/tests/common/: test_models.py  test_types.py
backend/tests/ingestion/: test_quoted_masks.py
backend/tests/orchestration/: test_nodes.py
backend/tests/unit/: test_audit.py  test_backfill.py  test_email_processing_coverage.py  test_pii.py  test_security_validators.py
(+13670 files in other folders)
