[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
    "*/static/*",
    "reference code",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "RUF", # Ruff-specific rules
]
ignore = ["E501", "E402", "ARG001", "SIM", "ARG", "RUF012", "F401", "B905", "B033", "RUF003", "B904", "UP017", "RUF022", "I001", "RUF001", "UP038", "RUF013", "C414", "C401", "UP028", "RUF005", "B008"] # Relaxed rules for verification

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools.packages.find]
where = ["backend/src", "cli/src"]
include = ["emailops*", "cortex*", "cortex_cli*"]
namespaces = true

[project]
name = "emailops"
version = "3.1.0"
description = "Email Operations Platform with Vertex AI Integration"
requires-python = ">=3.11"
dependencies = [
    "pywin32>=306; sys_platform == 'win32'",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "astor>=0.8.1",
]

[project.scripts]
emailops-export-outlook = "emailops.outlook_exporter.cli:main"
cortex = "cortex_cli.main:main"

[tool.safety]
ignore = ["51457"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = ["backend/src"]
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests", "cli/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
]
